[gd_scene load_steps=9 format=3 uid="uid://dauuisuxbavdv"]

[ext_resource type="Script" path="res://mob/mob.gd" id="1_23lvj"]
[ext_resource type="Texture2D" uid="uid://ch7enm7rwr74i" path="res://mob/roca.png" id="3_18tng"]
[ext_resource type="Texture2D" uid="uid://b22un54rangn5" path="res://mob/fuego.png" id="3_jstxe"]
[ext_resource type="Texture2D" uid="uid://dglhrdunl6rdr" path="res://mob/asahi.png" id="4_2q5oe"]
[ext_resource type="Texture2D" uid="uid://dug3osqgo8hux" path="res://mob/tanaka.png" id="5_wg03j"]
[ext_resource type="Texture2D" uid="uid://dru5xy882niys" path="res://mob/nishinoya.png" id="6_8ke4g"]
[ext_resource type="Texture2D" uid="uid://c4stiylt8idk3" path="res://mob/mob2.png" id="7_wcljc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6rfdd"]
size = Vector2(92, 114.5)

[node name="Mob" type="Area2D"]
script = ExtResource("1_23lvj")

[node name="FuegoSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-60, -61.1904)
scale = Vector2(0.192469, 0.192469)
texture = ExtResource("3_jstxe")

[node name="FuegoCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-60, -60.75)
shape = SubResource("RectangleShape2D_6rfdd")
disabled = true

[node name="RocaSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-51, -78)
scale = Vector2(0.224843, 0.214344)
texture = ExtResource("3_18tng")

[node name="RocaCol2" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(112, -113)
scale = Vector2(0.224843, 0.214344)
polygon = PackedVector2Array(-40, -101, -37, -101, -37, -102, -36, -102, -36, -101, -35, -101, -35, -102, -34, -102, -34, -101, 24, -101, 24, -102, 26, -102, 26, -101, 27, -101, 27, -102, 29, -102, 29, -101, 30, -101, 30, -100, 31, -100, 31, -99, 32, -99, 32, -87, 86, -87, 86, -86, 87, -86, 87, -85, 88, -85, 88, -73, 115, -73, 115, -72, 116, -72, 116, -71, 117, -71, 117, -59, 143, -59, 143, -58, 144, -58, 144, -57, 145, -57, 145, -45, 157, -45, 157, -44, 158, -44, 158, -43, 159, -43, 159, -3, 166, -3, 166, -2, 168, -2, 168, -3, 170, -3, 170, -2, 171, -2, 171, -1, 172, -1, 172, 0, 173, 0, 173, 68, 185, 68, 185, 69, 186, 69, 186, 70, 187, 70, 187, 82, 199, 82, 199, 83, 200, 83, 200, 84, 201, 84, 201, 96, 213, 96, 213, 97, 214, 97, 214, 98, 215, 98, 215, 99, 216, 99, 216, 100, 215, 100, 215, 110, 227, 110, 227, 111, 228, 111, 228, 112, 229, 112, 229, 113, 230, 113, 230, 115, 229, 115, 229, 138, 241, 138, 241, 139, 242, 139, 242, 140, 243, 140, 243, 141, 244, 141, 244, 183, 243, 183, 243, 184, 242, 184, 242, 185, 241, 185, 241, 186, 231, 186, 231, 187, 230, 187, 230, 188, 229, 188, 229, 189, 230, 189, 230, 190, 229, 190, 229, 195, 230, 195, 230, 196, 231, 196, 231, 197, 230, 197, 230, 198, 229, 198, 229, 199, 227, 199, 227, 200, 215, 200, 215, 206, 216, 206, 216, 207, 215, 207, 215, 211, 216, 211, 216, 212, 215, 212, 215, 213, 214, 213, 214, 214, 59, 214, 59, 215, 58, 215, 58, 214, 57, 214, 57, 213, 56, 213, 56, 212, 55, 212, 55, 200, 43, 200, 43, 199, 42, 199, 42, 198, 41, 198, 41, 197, 40, 197, 40, 196, 41, 196, 41, 186, 18, 186, 18, 196, 19, 196, 19, 197, 18, 197, 18, 198, 17, 198, 17, 199, 16, 199, 16, 200, -56, 200, -56, 199, -57, 199, -57, 198, -58, 198, -58, 186, -81, 186, -81, 196, -80, 196, -80, 197, -81, 197, -81, 198, -82, 198, -82, 199, -83, 199, -83, 200, -197, 200, -197, 199, -198, 199, -198, 198, -199, 198, -199, 188, -200, 188, -200, 187, -201, 187, -201, 186, -211, 186, -211, 185, -212, 185, -212, 184, -213, 184, -213, 154, -212, 154, -212, 153, -211, 153, -211, 152, -201, 152, -201, 153, -200, 153, -200, 152, -199, 152, -199, 140, -198, 140, -198, 139, -197, 139, -197, 138, -185, 138, -185, 136, -186, 136, -186, 135, -187, 135, -187, 134, -186, 134, -186, 133, -185, 133, -185, 130, -193, 130, -193, 131, -194, 131, -194, 132, -195, 132, -195, 131, -196, 131, -196, 130, -198, 130, -198, 131, -199, 131, -199, 130, -200, 130, -200, 129, -201, 129, -201, 128, -200, 128, -200, 127, -199, 127, -199, 30, -200, 30, -200, 29, -201, 29, -201, 28, -200, 28, -200, 27, -199, 27, -199, 26, -196, 26, -196, 25, -195, 25, -195, 26, -185, 26, -185, 0, -184, 0, -184, -1, -183, -1, -183, -2, -182, -2, -182, -3, -180, -3, -180, -2, -178, -2, -178, -3, -171, -3, -171, -28, -170, -28, -170, -29, -169, -29, -169, -30, -168, -30, -168, -31, -157, -31, -157, -42, -156, -42, -156, -43, -155, -43, -155, -44, -154, -44, -154, -45, -143, -45, -143, -57, -142, -57, -142, -58, -141, -58, -141, -59, -128, -59, -128, -69, -129, -69, -129, -70, -128, -70, -128, -71, -127, -71, -127, -72, -126, -72, -126, -73, -89, -73, -89, -74, -88, -74, -88, -75, -86, -75, -86, -85, -85, -85, -85, -86, -84, -86, -84, -87, -44, -87, -44, -99, -43, -99, -43, -100, -42, -100, -42, -101, -41, -101, -41, -102, -40, -102)
disabled = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(-11, -11)

[node name="asahiSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-46, -73)
scale = Vector2(0.622302, 0.6)
texture = ExtResource("4_2q5oe")

[node name="asahiCol" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-47, -69)
scale = Vector2(0.618632, 0.613444)
polygon = PackedVector2Array(-5.5, -90.4, -5.5, -88.5, -4.2, -87.5, -0.199997, -90.5, 1.5, -90.5, 25.5, -91.5, 25.5, -88.5, 27, -82.5, 32.3, -82.5, 41.5, -85.2, 41.5, -81.5, 42.3, -74.5, 45, -74.5, 50.5, -71.7, 50.5, -69.3, 50, -67.5, 52.1, -67.5, 58.5, -63.6, 58.5, -61.4, 57.7, -55.1, 59.9, -53.5, 63.4, -55.8, 65.5, -54.7, 65.5, -53.3, 67.9, -51, 66.8, -48.5, 65.5, -8.5, 63.1, -8.5, 57.5, -4.5, 57.5, 8, 65.5, 9.9, 65.5, 22.5, 62.7, 22.5, 57.4, 24, 54.9, 31.5, 41.9, 31.5, 41.5, 32.8, 41.5, 33.5, 42.2, 37.5, 50.5, 37.5, 50.5, 40.6, 49.9, 45.1, 55.5, 42.3, 55.5, 45.3, 59.5, 47.3, 59.5, 49.7, 57.1, 60.5, 54.8, 60.5, 49.5, 61.3, 49.5, 64, 46.7, 69.5, 34.5, 69.5, 34.5, 76.8, 31.9, 84.5, 27.5, 84.5, 27.5, 88, 25.2, 92.5, -2.5, 92.5, -2.5, 91, -4, 88.1, -5.1, 91.5, -27.7, 91.5, -28.7, 92.5, -32.5, 92.5, -32.5, 90.5, -34, 85.5, -43.5, 78.5, -43.5, 75.2, -42.2, 71.3, -54.5, 69.2, -54.5, 67.6, -57.5, 65.6, -57.5, 63.3, -57, 61.5, -59, 61.5, -64.5, 58.7, -64.5, 47.5, -62, 47.5, -57.5, 45.3, -57.5, 43.9, -53.6, 37.5, -49.5, 37.5, -49.5, 36.5, -50.5, 36.5, -50.5, 31.5, -60.2, 31.5, -65.5, 27.5, -65.5, 25.2, -65.3, 24.5, -68.3, 24.5, -69.5, 23.3, -69.5, 9.4, -64.5, 8, -64.5, -5.5, -69.5, -3.3, -69.5, -50.6, -65.6, -56.5, -64.5, -56.5, -64.5, -63, -62.7, -66.5, -61.1, -66.5, -51.5, -73.5, -51.5, -74.1, -45.6, -83.5, -43.4, -83.5, -36.2, -82.7, -28.5, -89.4, -28.5, -91.6)
disabled = true

[node name="TanakaSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-36, -63)
scale = Vector2(0.495837, 0.495837)
texture = ExtResource("5_wg03j")

[node name="TanakaCol" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-36, -64)
scale = Vector2(0.483952, 0.483952)
polygon = PackedVector2Array(21.5, -88.5, 22.5, -88.5, 22.5, -87.5, 23.5, -87.5, 23.5, -86.5, 24.5, -86.5, 24.5, -85.5, 23.5, -85.5, 23.5, -81.5, 35.5, -81.5, 35.5, -82.5, 36.5, -82.5, 36.5, -81.5, 37.5, -81.5, 37.5, -80.5, 38.5, -80.5, 38.5, -78.5, 39.5, -78.5, 39.5, -77.5, 38.5, -77.5, 38.5, -74.5, 44.5, -74.5, 44.5, -73.5, 45.5, -73.5, 45.5, -72.5, 46.5, -72.5, 46.5, -66.5, 51.5, -66.5, 51.5, -65.5, 52.5, -65.5, 52.5, -64.5, 53.5, -64.5, 53.5, -63.5, 54.5, -63.5, 54.5, -62.5, 53.5, -62.5, 53.5, 4.5, 52.5, 4.5, 52.5, 5.5, 51.5, 5.5, 51.5, 7.5, 50.5, 7.5, 50.5, 8.5, 49.5, 8.5, 49.5, 9.5, 48.5, 9.5, 48.5, 8.5, 47.5, 8.5, 47.5, 9.5, 46.5, 9.5, 46.5, 11.5, 45.5, 11.5, 45.5, 12.5, 44.5, 12.5, 44.5, 13.5, 43.5, 13.5, 43.5, 14.5, 44.5, 14.5, 44.5, 15.5, 43.5, 15.5, 43.5, 16.5, 42.5, 16.5, 42.5, 17.5, 41.5, 17.5, 41.5, 16.5, 40.5, 16.5, 40.5, 15.5, 39.5, 15.5, 39.5, 14.5, 38.5, 14.5, 38.5, 17.5, 39.5, 17.5, 39.5, 18.5, 38.5, 18.5, 38.5, 19.5, 37.5, 19.5, 37.5, 20.5, 36.5, 20.5, 36.5, 21.5, 35.5, 21.5, 35.5, 20.5, 33.5, 20.5, 33.5, 21.5, 32.5, 21.5, 32.5, 22.5, 33.5, 22.5, 33.5, 23.5, 32.5, 23.5, 32.5, 24.5, 31.5, 24.5, 31.5, 31.5, 32.5, 31.5, 32.5, 30.5, 33.5, 30.5, 33.5, 31.5, 35.5, 31.5, 35.5, 30.5, 36.5, 30.5, 36.5, 29.5, 37.5, 29.5, 37.5, 30.5, 38.5, 30.5, 38.5, 31.5, 39.5, 31.5, 39.5, 32.5, 38.5, 32.5, 38.5, 33.5, 39.5, 33.5, 39.5, 34.5, 38.5, 34.5, 38.5, 37.5, 39.5, 37.5, 39.5, 38.5, 44.5, 38.5, 44.5, 39.5, 45.5, 39.5, 45.5, 40.5, 46.5, 40.5, 46.5, 44.5, 47.5, 44.5, 47.5, 46.5, 52.5, 46.5, 52.5, 47.5, 53.5, 47.5, 53.5, 48.5, 54.5, 48.5, 54.5, 49.5, 53.5, 49.5, 53.5, 55.5, 54.5, 55.5, 54.5, 56.5, 53.5, 56.5, 53.5, 57.5, 52.5, 57.5, 52.5, 58.5, 50.5, 58.5, 50.5, 60.5, 49.5, 60.5, 49.5, 61.5, 48.5, 61.5, 48.5, 62.5, 47.5, 62.5, 47.5, 63.5, 46.5, 63.5, 46.5, 64.5, 45.5, 64.5, 45.5, 65.5, 44.5, 65.5, 44.5, 66.5, 31.5, 66.5, 31.5, 74.5, 32.5, 74.5, 32.5, 75.5, 33.5, 75.5, 33.5, 76.5, 34.5, 76.5, 34.5, 77.5, 33.5, 77.5, 33.5, 78.5, 32.5, 78.5, 32.5, 79.5, 30.5, 79.5, 30.5, 80.5, 29.5, 80.5, 29.5, 81.5, 23.5, 81.5, 23.5, 86.5, 22.5, 86.5, 22.5, 87.5, 21.5, 87.5, 21.5, 88.5, 0.5, 88.5, 0.5, 89.5, -0.5, 89.5, -0.5, 88.5, -2.5, 88.5, -2.5, 87.5, -3.5, 87.5, -3.5, 86.5, -4.5, 86.5, -4.5, 84.5, -3.5, 84.5, -3.5, 81.5, -6.5, 81.5, -6.5, 85.5, -5.5, 85.5, -5.5, 86.5, -6.5, 86.5, -6.5, 87.5, -7.5, 87.5, -7.5, 88.5, -32.5, 88.5, -32.5, 87.5, -33.5, 87.5, -33.5, 86.5, -34.5, 86.5, -34.5, 85.5, -33.5, 85.5, -33.5, 84.5, -34.5, 84.5, -34.5, 83.5, -35.5, 83.5, -35.5, 81.5, -39.5, 81.5, -39.5, 80.5, -40.5, 80.5, -40.5, 79.5, -41.5, 79.5, -41.5, 66.5, -54.5, 66.5, -54.5, 65.5, -55.5, 65.5, -55.5, 64.5, -56.5, 64.5, -56.5, 59.5, -57.5, 59.5, -57.5, 60.5, -58.5, 60.5, -58.5, 59.5, -59.5, 59.5, -59.5, 58.5, -60.5, 58.5, -60.5, 59.5, -61.5, 59.5, -61.5, 58.5, -62.5, 58.5, -62.5, 57.5, -63.5, 57.5, -63.5, 51.5, -64.5, 51.5, -64.5, 50.5, -63.5, 50.5, -63.5, 47.5, -62.5, 47.5, -62.5, 46.5, -61.5, 46.5, -61.5, 45.5, -60.5, 45.5, -60.5, 46.5, -56.5, 46.5, -56.5, 40.5, -55.5, 40.5, -55.5, 39.5, -54.5, 39.5, -54.5, 38.5, -48.5, 38.5, -48.5, 33.5, -47.5, 33.5, -47.5, 32.5, -46.5, 32.5, -46.5, 31.5, -41.5, 31.5, -41.5, 21.5, -44.5, 21.5, -44.5, 20.5, -45.5, 20.5, -45.5, 21.5, -46.5, 21.5, -46.5, 20.5, -47.5, 20.5, -47.5, 19.5, -48.5, 19.5, -48.5, 17.5, -49.5, 17.5, -49.5, 16.5, -50.5, 16.5, -50.5, 15.5, -51.5, 15.5, -51.5, 14.5, -50.5, 14.5, -50.5, 13.5, -52.5, 13.5, -52.5, 14.5, -53.5, 14.5, -53.5, 15.5, -54.5, 15.5, -54.5, 14.5, -55.5, 14.5, -55.5, 13.5, -56.5, 13.5, -56.5, 12.5, -55.5, 12.5, -55.5, 11.5, -56.5, 11.5, -56.5, 6.5, -58.5, 6.5, -58.5, 5.5, -59.5, 5.5, -59.5, 6.5, -61.5, 6.5, -61.5, 5.5, -62.5, 5.5, -62.5, 4.5, -63.5, 4.5, -63.5, -62.5, -64.5, -62.5, -64.5, -63.5, -63.5, -63.5, -63.5, -64.5, -62.5, -64.5, -62.5, -65.5, -61.5, -65.5, -61.5, -66.5, -56.5, -66.5, -56.5, -72.5, -55.5, -72.5, -55.5, -73.5, -54.5, -73.5, -54.5, -74.5, -48.5, -74.5, -48.5, -79.5, -47.5, -79.5, -47.5, -80.5, -46.5, -80.5, -46.5, -81.5, -38.5, -81.5, -38.5, -82.5, -37.5, -82.5, -37.5, -84.5, -36.5, -84.5, -36.5, -85.5, -35.5, -85.5, -35.5, -86.5, -34.5, -86.5, -34.5, -85.5, -33.5, -85.5, -33.5, -87.5, -32.5, -87.5, -32.5, -88.5, -31.5, -88.5, -31.5, -89.5, 21.5, -89.5)
disabled = true

[node name="NIshinoyaSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-39, -64)
scale = Vector2(0.579137, 0.564865)
texture = ExtResource("6_8ke4g")

[node name="NishinoyaCol" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-40, -62)
scale = Vector2(0.559211, 0.577703)
polygon = PackedVector2Array(-42.5, -91.5, -36.5, -91.5, -36.5, -90.5, -35.5, -90.5, -35.5, -89.5, -34.5, -89.5, -34.5, -87.5, -35.5, -87.5, -35.5, -86.5, -34.5, -86.5, -34.5, -84.5, 27.5, -84.5, 27.5, -90.5, 28.5, -90.5, 28.5, -91.5, 29.5, -91.5, 29.5, -92.5, 30.5, -92.5, 30.5, -91.5, 35.5, -91.5, 35.5, -92.5, 47.5, -92.5, 47.5, -71.5, 48.5, -71.5, 48.5, -72.5, 49.5, -72.5, 49.5, -71.5, 50.5, -71.5, 50.5, -75.5, 51.5, -75.5, 51.5, -76.5, 52.5, -76.5, 52.5, -77.5, 53.5, -77.5, 53.5, -76.5, 60.5, -76.5, 60.5, -75.5, 61.5, -75.5, 61.5, -74.5, 62.5, -74.5, 62.5, -0.5, 63.5, -0.5, 63.5, 0.5, 62.5, 0.5, 62.5, 1.5, 61.5, 1.5, 61.5, 2.5, 60.5, 2.5, 60.5, 3.5, 56.5, 3.5, 56.5, 4.5, 55.5, 4.5, 55.5, 8.5, 54.5, 8.5, 54.5, 9.5, 53.5, 9.5, 53.5, 10.5, 52.5, 10.5, 52.5, 11.5, 51.5, 11.5, 51.5, 10.5, 48.5, 10.5, 48.5, 11.5, 47.5, 11.5, 47.5, 13.5, 48.5, 13.5, 48.5, 14.5, 47.5, 14.5, 47.5, 15.5, 48.5, 15.5, 48.5, 16.5, 47.5, 16.5, 47.5, 17.5, 46.5, 17.5, 46.5, 18.5, 40.5, 18.5, 40.5, 23.5, 39.5, 23.5, 39.5, 24.5, 38.5, 24.5, 38.5, 25.5, 37.5, 25.5, 37.5, 26.5, 33.5, 26.5, 33.5, 27.5, 34.5, 27.5, 34.5, 28.5, 33.5, 28.5, 33.5, 29.5, 32.5, 29.5, 32.5, 35.5, 33.5, 35.5, 33.5, 36.5, 36.5, 36.5, 36.5, 35.5, 37.5, 35.5, 37.5, 34.5, 38.5, 34.5, 38.5, 35.5, 39.5, 35.5, 39.5, 36.5, 40.5, 36.5, 40.5, 37.5, 39.5, 37.5, 39.5, 38.5, 40.5, 38.5, 40.5, 43.5, 45.5, 43.5, 45.5, 44.5, 46.5, 44.5, 46.5, 45.5, 47.5, 45.5, 47.5, 51.5, 53.5, 51.5, 53.5, 52.5, 54.5, 52.5, 54.5, 53.5, 55.5, 53.5, 55.5, 61.5, 54.5, 61.5, 54.5, 62.5, 53.5, 62.5, 53.5, 63.5, 54.5, 63.5, 54.5, 64.5, 55.5, 64.5, 55.5, 65.5, 54.5, 65.5, 54.5, 66.5, 53.5, 66.5, 53.5, 67.5, 52.5, 67.5, 52.5, 66.5, 51.5, 66.5, 51.5, 65.5, 50.5, 65.5, 50.5, 64.5, 51.5, 64.5, 51.5, 63.5, 47.5, 63.5, 47.5, 69.5, 46.5, 69.5, 46.5, 70.5, 45.5, 70.5, 45.5, 71.5, 32.5, 71.5, 32.5, 84.5, 31.5, 84.5, 31.5, 85.5, 30.5, 85.5, 30.5, 86.5, 25.5, 86.5, 25.5, 91.5, 24.5, 91.5, 24.5, 92.5, -1.5, 92.5, -1.5, 91.5, -2.5, 91.5, -2.5, 86.5, -4.5, 86.5, -4.5, 88.5, -5.5, 88.5, -5.5, 89.5, -4.5, 89.5, -4.5, 91.5, -5.5, 91.5, -5.5, 92.5, -32.5, 92.5, -32.5, 87.5, -33.5, 87.5, -33.5, 86.5, -37.5, 86.5, -37.5, 85.5, -38.5, 85.5, -38.5, 84.5, -39.5, 84.5, -39.5, 71.5, -52.5, 71.5, -52.5, 70.5, -53.5, 70.5, -53.5, 69.5, -54.5, 69.5, -54.5, 67.5, -55.5, 67.5, -55.5, 64.5, -56.5, 64.5, -56.5, 63.5, -58.5, 63.5, -58.5, 64.5, -59.5, 64.5, -59.5, 63.5, -60.5, 63.5, -60.5, 62.5, -61.5, 62.5, -61.5, 61.5, -62.5, 61.5, -62.5, 57.5, -63.5, 57.5, -63.5, 58.5, -64.5, 58.5, -64.5, 59.5, -65.5, 59.5, -65.5, 58.5, -66.5, 58.5, -66.5, 57.5, -67.5, 57.5, -67.5, 56.5, -66.5, 56.5, -66.5, 54.5, -67.5, 54.5, -67.5, 53.5, -66.5, 53.5, -66.5, 52.5, -65.5, 52.5, -65.5, 51.5, -63.5, 51.5, -63.5, 52.5, -61.5, 52.5, -61.5, 51.5, -54.5, 51.5, -54.5, 47.5, -55.5, 47.5, -55.5, 46.5, -54.5, 46.5, -54.5, 45.5, -53.5, 45.5, -53.5, 44.5, -52.5, 44.5, -52.5, 43.5, -49.5, 43.5, -49.5, 42.5, -48.5, 42.5, -48.5, 41.5, -49.5, 41.5, -49.5, 40.5, -48.5, 40.5, -48.5, 38.5, -47.5, 38.5, -47.5, 37.5, -46.5, 37.5, -46.5, 36.5, -44.5, 36.5, -44.5, 35.5, -43.5, 35.5, -43.5, 36.5, -40.5, 36.5, -40.5, 35.5, -39.5, 35.5, -39.5, 28.5, -40.5, 28.5, -40.5, 27.5, -41.5, 27.5, -41.5, 26.5, -42.5, 26.5, -42.5, 25.5, -43.5, 25.5, -43.5, 26.5, -44.5, 26.5, -44.5, 25.5, -46.5, 25.5, -46.5, 24.5, -47.5, 24.5, -47.5, 23.5, -48.5, 23.5, -48.5, 22.5, -49.5, 22.5, -49.5, 21.5, -50.5, 21.5, -50.5, 20.5, -51.5, 20.5, -51.5, 19.5, -52.5, 19.5, -52.5, 18.5, -53.5, 18.5, -53.5, 19.5, -54.5, 19.5, -54.5, 20.5, -55.5, 20.5, -55.5, 21.5, -56.5, 21.5, -56.5, 20.5, -57.5, 20.5, -57.5, 19.5, -58.5, 19.5, -58.5, 18.5, -57.5, 18.5, -57.5, 17.5, -56.5, 17.5, -56.5, 16.5, -55.5, 16.5, -55.5, 17.5, -54.5, 17.5, -54.5, 15.5, -55.5, 15.5, -55.5, 14.5, -56.5, 14.5, -56.5, 15.5, -57.5, 15.5, -57.5, 14.5, -58.5, 14.5, -58.5, 13.5, -59.5, 13.5, -59.5, 12.5, -58.5, 12.5, -58.5, 10.5, -61.5, 10.5, -61.5, 9.5, -62.5, 9.5, -62.5, 8.5, -63.5, 8.5, -63.5, 7.5, -62.5, 7.5, -62.5, 5.5, -63.5, 5.5, -63.5, 4.5, -62.5, 4.5, -62.5, 3.5, -65.5, 3.5, -65.5, 4.5, -66.5, 4.5, -66.5, 5.5, -67.5, 5.5, -67.5, 4.5, -68.5, 4.5, -68.5, 3.5, -69.5, 3.5, -69.5, -74.5, -68.5, -74.5, -68.5, -75.5, -67.5, -75.5, -67.5, -76.5, -59.5, -76.5, -59.5, -75.5, -58.5, -75.5, -58.5, -74.5, -57.5, -74.5, -57.5, -69.5, -54.5, -69.5, -54.5, -92.5, -42.5, -92.5)
disabled = true

[node name="SugaSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-46, -73)
scale = Vector2(0.636691, 0.591892)
texture = ExtResource("7_wcljc")

[node name="sugaCollision" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-43, -73)
scale = Vector2(0.68795, 0.631757)
polygon = PackedVector2Array(21.5, -89.5, 22.5, -89.5, 22.5, -90.5, 23.5, -90.5, 23.5, -89.5, 24.5, -89.5, 24.5, -88.5, 27.5, -88.5, 27.5, -87.5, 28.5, -87.5, 28.5, -86.5, 29.5, -86.5, 29.5, -85.5, 28.5, -85.5, 28.5, -80.5, 32.5, -80.5, 32.5, -81.5, 33.5, -81.5, 33.5, -80.5, 34.5, -80.5, 34.5, -79.5, 36.5, -79.5, 36.5, -80.5, 37.5, -80.5, 37.5, -81.5, 38.5, -81.5, 38.5, -80.5, 39.5, -80.5, 39.5, -79.5, 40.5, -79.5, 40.5, -78.5, 39.5, -78.5, 39.5, -77.5, 38.5, -77.5, 38.5, -76.5, 37.5, -76.5, 37.5, -77.5, 36.5, -77.5, 36.5, -74.5, 37.5, -74.5, 37.5, -73.5, 40.5, -73.5, 40.5, -74.5, 41.5, -74.5, 41.5, -73.5, 42.5, -73.5, 42.5, -72.5, 43.5, -72.5, 43.5, -70.5, 44.5, -70.5, 44.5, -69.5, 45.5, -69.5, 45.5, -68.5, 44.5, -68.5, 44.5, -65.5, 47.5, -65.5, 47.5, -66.5, 48.5, -66.5, 48.5, -65.5, 49.5, -65.5, 49.5, -64.5, 50.5, -64.5, 50.5, -63.5, 51.5, -63.5, 51.5, -58.5, 56.5, -58.5, 56.5, -57.5, 57.5, -57.5, 57.5, -56.5, 58.5, -56.5, 58.5, -55.5, 59.5, -55.5, 59.5, -54.5, 58.5, -54.5, 58.5, -45.5, 59.5, -45.5, 59.5, -43.5, 64.5, -43.5, 64.5, -42.5, 65.5, -42.5, 65.5, -41.5, 66.5, -41.5, 66.5, -39.5, 67.5, -39.5, 67.5, -38.5, 68.5, -38.5, 68.5, -37.5, 67.5, -37.5, 67.5, -36.5, 66.5, -36.5, 66.5, -28.5, 69.5, -28.5, 69.5, -15.5, 66.5, -15.5, 66.5, -10.5, 65.5, -10.5, 65.5, -9.5, 64.5, -9.5, 64.5, -8.5, 60.5, -8.5, 60.5, -7.5, 59.5, -7.5, 59.5, -6.5, 58.5, -6.5, 58.5, 12.5, 57.5, 12.5, 57.5, 13.5, 56.5, 13.5, 56.5, 14.5, 53.5, 14.5, 53.5, 15.5, 54.5, 15.5, 54.5, 16.5, 55.5, 16.5, 55.5, 17.5, 54.5, 17.5, 54.5, 18.5, 53.5, 18.5, 53.5, 19.5, 52.5, 19.5, 52.5, 18.5, 51.5, 18.5, 51.5, 19.5, 50.5, 19.5, 50.5, 20.5, 49.5, 20.5, 49.5, 21.5, 48.5, 21.5, 48.5, 22.5, 47.5, 22.5, 47.5, 21.5, 46.5, 21.5, 46.5, 22.5, 45.5, 22.5, 45.5, 23.5, 44.5, 23.5, 44.5, 22.5, 43.5, 22.5, 43.5, 27.5, 42.5, 27.5, 42.5, 28.5, 41.5, 28.5, 41.5, 29.5, 36.5, 29.5, 36.5, 33.5, 37.5, 33.5, 37.5, 35.5, 38.5, 35.5, 38.5, 36.5, 39.5, 36.5, 39.5, 37.5, 40.5, 37.5, 40.5, 39.5, 42.5, 39.5, 42.5, 40.5, 43.5, 40.5, 43.5, 41.5, 44.5, 41.5, 44.5, 42.5, 45.5, 42.5, 45.5, 43.5, 46.5, 43.5, 46.5, 44.5, 47.5, 44.5, 47.5, 45.5, 46.5, 45.5, 46.5, 46.5, 49.5, 46.5, 49.5, 47.5, 50.5, 47.5, 50.5, 48.5, 51.5, 48.5, 51.5, 49.5, 52.5, 49.5, 52.5, 50.5, 53.5, 50.5, 53.5, 51.5, 54.5, 51.5, 54.5, 50.5, 56.5, 50.5, 56.5, 51.5, 57.5, 51.5, 57.5, 52.5, 58.5, 52.5, 58.5, 53.5, 59.5, 53.5, 59.5, 54.5, 60.5, 54.5, 60.5, 55.5, 61.5, 55.5, 61.5, 56.5, 60.5, 56.5, 60.5, 57.5, 59.5, 57.5, 59.5, 58.5, 58.5, 58.5, 58.5, 65.5, 57.5, 65.5, 57.5, 66.5, 56.5, 66.5, 56.5, 67.5, 54.5, 67.5, 54.5, 66.5, 52.5, 66.5, 52.5, 67.5, 51.5, 67.5, 51.5, 70.5, 52.5, 70.5, 52.5, 71.5, 53.5, 71.5, 53.5, 72.5, 52.5, 72.5, 52.5, 73.5, 51.5, 73.5, 51.5, 74.5, 50.5, 74.5, 50.5, 73.5, 49.5, 73.5, 49.5, 74.5, 48.5, 74.5, 48.5, 75.5, 46.5, 75.5, 46.5, 74.5, 37.5, 74.5, 37.5, 75.5, 36.5, 75.5, 36.5, 85.5, 37.5, 85.5, 37.5, 86.5, 36.5, 86.5, 36.5, 87.5, 35.5, 87.5, 35.5, 88.5, 34.5, 88.5, 34.5, 89.5, 31.5, 89.5, 31.5, 90.5, 30.5, 90.5, 30.5, 91.5, 29.5, 91.5, 29.5, 90.5, 28.5, 90.5, 28.5, 92.5, 1.5, 92.5, 1.5, 89.5, 0.5, 89.5, 0.5, 90.5, -0.5, 90.5, -0.5, 91.5, -1.5, 91.5, -1.5, 92.5, -28.5, 92.5, -28.5, 90.5, -29.5, 90.5, -29.5, 91.5, -30.5, 91.5, -30.5, 90.5, -31.5, 90.5, -31.5, 89.5, -34.5, 89.5, -34.5, 88.5, -35.5, 88.5, -35.5, 87.5, -36.5, 87.5, -36.5, 74.5, -48.5, 74.5, -48.5, 73.5, -49.5, 73.5, -49.5, 72.5, -50.5, 72.5, -50.5, 71.5, -51.5, 71.5, -51.5, 66.5, -55.5, 66.5, -55.5, 67.5, -56.5, 67.5, -56.5, 66.5, -57.5, 66.5, -57.5, 65.5, -58.5, 65.5, -58.5, 62.5, -59.5, 62.5, -59.5, 61.5, -58.5, 61.5, -58.5, 60.5, -59.5, 60.5, -59.5, 59.5, -58.5, 59.5, -58.5, 55.5, -59.5, 55.5, -59.5, 54.5, -58.5, 54.5, -58.5, 53.5, -59.5, 53.5, -59.5, 52.5, -58.5, 52.5, -58.5, 51.5, -57.5, 51.5, -57.5, 50.5, -56.5, 50.5, -56.5, 51.5, -55.5, 51.5, -55.5, 52.5, -54.5, 52.5, -54.5, 53.5, -53.5, 53.5, -53.5, 52.5, -52.5, 52.5, -52.5, 53.5, -51.5, 53.5, -51.5, 48.5, -50.5, 48.5, -50.5, 47.5, -49.5, 47.5, -49.5, 46.5, -48.5, 46.5, -48.5, 45.5, -47.5, 45.5, -47.5, 44.5, -46.5, 44.5, -46.5, 45.5, -45.5, 45.5, -45.5, 46.5, -43.5, 46.5, -43.5, 41.5, -42.5, 41.5, -42.5, 40.5, -41.5, 40.5, -41.5, 39.5, -42.5, 39.5, -42.5, 38.5, -43.5, 38.5, -43.5, 37.5, -42.5, 37.5, -42.5, 36.5, -41.5, 36.5, -41.5, 35.5, -40.5, 35.5, -40.5, 36.5, -39.5, 36.5, -39.5, 37.5, -38.5, 37.5, -38.5, 35.5, -37.5, 35.5, -37.5, 34.5, -36.5, 34.5, -36.5, 29.5, -38.5, 29.5, -38.5, 30.5, -39.5, 30.5, -39.5, 31.5, -40.5, 31.5, -40.5, 30.5, -41.5, 30.5, -41.5, 29.5, -42.5, 29.5, -42.5, 27.5, -43.5, 27.5, -43.5, 24.5, -44.5, 24.5, -44.5, 23.5, -45.5, 23.5, -45.5, 22.5, -44.5, 22.5, -44.5, 21.5, -47.5, 21.5, -47.5, 22.5, -48.5, 22.5, -48.5, 23.5, -49.5, 23.5, -49.5, 22.5, -50.5, 22.5, -50.5, 21.5, -51.5, 21.5, -51.5, 20.5, -50.5, 20.5, -50.5, 19.5, -51.5, 19.5, -51.5, 15.5, -52.5, 15.5, -52.5, 14.5, -53.5, 14.5, -53.5, 15.5, -54.5, 15.5, -54.5, 16.5, -55.5, 16.5, -55.5, 17.5, -57.5, 17.5, -57.5, 16.5, -58.5, 16.5, -58.5, 15.5, -59.5, 15.5, -59.5, 14.5, -58.5, 14.5, -58.5, 13.5, -59.5, 13.5, -59.5, 12.5, -58.5, 12.5, -58.5, 11.5, -59.5, 11.5, -59.5, 10.5, -58.5, 10.5, -58.5, 0.5, -59.5, 0.5, -59.5, -0.5, -63.5, -0.5, -63.5, -1.5, -64.5, -1.5, -64.5, -2.5, -65.5, -2.5, -65.5, -3.5, -66.5, -3.5, -66.5, -5.5, -67.5, -5.5, -67.5, -6.5, -68.5, -6.5, -68.5, -7.5, -67.5, -7.5, -67.5, -8.5, -69.5, -8.5, -69.5, -20.5, -66.5, -20.5, -66.5, -39.5, -67.5, -39.5, -67.5, -40.5, -66.5, -40.5, -66.5, -41.5, -65.5, -41.5, -65.5, -42.5, -64.5, -42.5, -64.5, -43.5, -62.5, -43.5, -62.5, -44.5, -63.5, -44.5, -63.5, -45.5, -62.5, -45.5, -62.5, -46.5, -61.5, -46.5, -61.5, -47.5, -60.5, -47.5, -60.5, -46.5, -59.5, -46.5, -59.5, -45.5, -58.5, -45.5, -58.5, -54.5, -59.5, -54.5, -59.5, -55.5, -58.5, -55.5, -58.5, -56.5, -57.5, -56.5, -57.5, -57.5, -56.5, -57.5, -56.5, -58.5, -51.5, -58.5, -51.5, -63.5, -50.5, -63.5, -50.5, -64.5, -51.5, -64.5, -51.5, -65.5, -50.5, -65.5, -50.5, -66.5, -51.5, -66.5, -51.5, -67.5, -50.5, -67.5, -50.5, -68.5, -49.5, -68.5, -49.5, -69.5, -48.5, -69.5, -48.5, -68.5, -47.5, -68.5, -47.5, -67.5, -46.5, -67.5, -46.5, -66.5, -47.5, -66.5, -47.5, -65.5, -43.5, -65.5, -43.5, -71.5, -42.5, -71.5, -42.5, -72.5, -41.5, -72.5, -41.5, -73.5, -28.5, -73.5, -28.5, -79.5, -27.5, -79.5, -27.5, -80.5, -26.5, -80.5, -26.5, -81.5, -25.5, -81.5, -25.5, -80.5, -7.5, -80.5, -7.5, -81.5, -6.5, -81.5, -6.5, -86.5, -5.5, -86.5, -5.5, -87.5, -4.5, -87.5, -4.5, -88.5, -3.5, -88.5, -3.5, -89.5, -2.5, -89.5, -2.5, -88.5, -1.5, -88.5, -1.5, -89.5, -0.5, -89.5, -0.5, -90.5, 0.5, -90.5, 0.5, -89.5, 1.5, -89.5, 1.5, -92.5, 21.5, -92.5)
disabled = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
